# gitoxide

gix/: Cargo.toml
gix-dir/: Cargo.toml
gix-dir/src/: entry.rs  lib.rs  walk.rs
gix-dir/tests/: dir.rs
gix-dir/tests/fixtures/: many.sh
gix-dir/tests/fixtures/generated-archives/: .gitignore
gix-dir/tests/walk/: mod.rs
gix-features/: Cargo.toml
gix-features/src/: fs.rs
gix-odb/: Cargo.toml
gix-ref/: Cargo.toml
gix-ref/src/store/file/: find.rs  packed.rs
gix-ref/src/store/file/loose/: iter.rs
gix-ref/src/store/file/transaction/: prepare.rs
gix-ref/src/store/packed/: mod.rs  transaction.rs
gix-ref/tests/file/store/: mod.rs
gix/src/object/: mod.rs
gix/tests/repository/: open.rs
