[package]
name = "gix-dir"
version = "0.0.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with directory walks"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.65"

[lib]
doctest = false

[dependencies]
gix-index = { version = "^0.28.1", path = "../gix-index" }
gix-path = { version = "^0.10.3", path = "../gix-path" }

bstr = { version = "1.5.0", default-features = false }
thiserror = "1.0.56"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
